--- a/index.css
+++ b/index.css
@@ -23,40 +23,57 @@
 	font-family: 'montserrat', sans-serif;
 }
 
-input:not([type="radio"]):not([type="checkbox"]), button {
-	appearance: none;
-	border: none;
-	outline: none;
-	background: none;
-	cursor: initial;
-}
-/* End of Resets */
-
 body {
 	background: var(--light);
 	color: var(--dark);
 }
 
-section {
+
+/* 
+@import url('https://fonts.googleapis.com/css2?family=Fascinate&family=Macondo&family=Ms+Madi&family=Roboto+Flex:opsz,wght@8..144,100&family=Roboto:wght@100&family=Square+Peg&family=Updock&family=Whisper&display=swap'); */
+
+
+#form {
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	padding-left: 1.5rem;
 	padding-right: 1.5rem;
+} 
+
+.row #addItem {
+    float: right;
 }
 
-h3 {
-	color: var(--dark);
-	font-size: 1rem;
-	font-weight: 400;
-	margin-bottom: 0.5rem;
+.row #item-wrapper {
+    background-color: rgb(222, 149, 205);
+    width: 50%;
+} 
+
+/* list */
+ .list-unstyled {
+    height: 3em;
+    padding-top: .5em;
+}
+.addLine{
+    text-decoration: line-through ;
+    border-radius: 10px ;
+    border-left: 2px solid darkslategrey;
+    border-right: 2px solid darkslategrey;
 }
 
-h4 {
-	color: var(--grey);
-	font-size: 0.875rem;
-	font-weight: 700;
-	margin-bottom: 0.5rem;
+ul#item-wrapper .list-unstyled:hover .list-icon {
+    display: inline-block;
 }
+
+.list-content {
+   margin-left: 2em;
+}
+
+.list-icon {
+    float: right;
+    top: -1;
+    display: none;
+} 
 
 .greeting .title {
 	display: flex;
@@ -106,56 +123,6 @@ h4 {
 	cursor: pointer;
 }
 
-input[type="radio"],
-input[type="checkbox"] {
-	display: none;
-}
-
-.bubble {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 20px;
-	height: 20px;
-	border-radius: 999px;
-	border: 2px solid var(--business);
-	box-shadow: var(--business-glow);
-}
-
-.bubble.personal {
-	border-color: var(--personal);
-	box-shadow: var(--personal-glow);
-}
-
-.bubble::after {
-	content: '';
-	display: block;
-	opacity: 0;
-	width: 0px;
-	height: 0px;
-	background-color: var(--business);
-	box-shadow: var(--business-glow);
-	border-radius: 999px;
-	transition: 0.2s ease-in-out;
-}
-
-.bubble.personal::after {
-	background-color: var(--personal);
-	box-shadow: var(--personal-glow);
-}
-
-input:checked ~ .bubble::after {
-	width: 10px;
-	height: 10px;
-	opacity: 1;
-}
-
-.create-todo .options label div {
-	color: var(--dark);
-	font-size: 1.125rem;
-	margin-top: 1rem;
-}
-
 .create-todo input[type="submit"] {
 	display: block;
 	width: 100%;
@@ -175,63 +142,19 @@ input:checked ~ .bubble::after {
 	opacity: 0.75;
 }
 
-.todo-list .list {
-	margin: 1rem 0;
-}
-
-.todo-list .todo-item {
-	display: flex;
-	align-items: center;
-	background-color: #FFF;
-	padding: 1rem;
-	border-radius: 0.5rem;
-	box-shadow: var(--shadow);
-	margin-bottom: 1rem;
-}
-
-.todo-item label {
-	display: block;
-	margin-right: 1rem;
-	cursor: pointer;
-}
-
-.todo-item .todo-content {
-	flex: 1 1 0%;
-}
-
-.todo-item .todo-content input {
-	color: var(--dark);
-	font-size: 1.125rem;
-}
-
-.todo-item .actions {
-	display: flex;
-	align-items: center;
-}
-
-.todo-item .actions button {
-	display: block;
-	padding: 0.5rem;
-	border-radius: 0.25rem;
-	color: #FFF;
-	cursor: pointer;
-	transition: 0.2s ease-in-out;
-}
-
-.todo-item .actions button:hover {
-	opacity: 0.75;
-}
-
-.todo-item .actions .edit {
-	margin-right: 0.5rem;
-	background-color: var(--primary);
-}
-
-.todo-item .actions .delete {
-	background-color: var(--danger);
-}
-
-.todo-item.done .todo-content input {
-	text-decoration: line-through;
-	color: var(--grey);
+button{
+    box-shadow:inset 0px 1px 0px 0px #fce2c1;
+	background:linear-gradient(to bottom, #ffc477 5%, #fb9e25 100%);
+	background-color:#ffc477;
+	border-radius:11px;
+	border:2px solid #eeb44f;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:16px;
+	font-weight:bold;
+	padding:8px 18px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #cc9f52;
 }
